--- a/source/compliance/index.html.slim
+++ b/source/compliance/index.html.slim
@@ -40,7 +40,7 @@ section#top.show-for-large.section-article.pad-no-bottom.bg-gray-3.container-ima
 .strip-bright
 scss:
   .border-dash-line {
-    margin: 1rem 0;
+    margin: 1.3rem 0;
     height: 2px;
     position: relative;
     background: repeating-linear-gradient(to right,white 0,white 8px,transparent 8px,transparent 15px);
@@ -63,10 +63,11 @@ scss:
   }
 
 section#compliance-products.section-article.bg-gray-3.container-image-fill.lozad data-background-image="https://images.ctfassets.net/189dvqdsjh46/6OKt8JnNqo86wQIgOqiGcs/232794aa517af9870472dd34726ef595/hex-pattern-dark-bg.svg"
-  .row.align-center
-    .columns.small-12.medium-10.large-8.text-center
+  .row
+    .columns.small-12.medium-10.large-8.group
       h2.headline-2 Compliance Solutions
-      p.lead <strong>You have complex problems.</strong> Datica has a family of powerful solutions. Powerful when used on their own but meant to work together, our products and solutions address your most complex challenges.
+      p.lead Compliance on the cloud isn’t a one-size-fits-all kind of challenge. Maybe you don’t have the expertise, time, and resources to build your own compliant infrastructure and want a solution that picks up where your cloud provider leaves off.  Or, maybe you do and just need help with compliance monitoring and reporting for your complex environments.
+      p.lead Wherever you are on the <a class="link-light-underline" href="/academy/steps-to-climbing-maturity-model/" title="Steps to Climbing the Maturity Model | Datica Academy">compliance maturity scale</a>, we can help.
   #product-lens.show-for-medium
     .row.align-justify.text-center
       .columns.small-12.medium-4 
@@ -78,14 +79,11 @@ section#compliance-products.section-article.bg-gray-3.container-image-fill.lozad
         .border-dash-line
     .row.align-justify.text-small
       .columns.small-12.medium-4
-        p Quickly deploy compliant apps on a hosted platform with a robust BAA.
-        p You gain speed, at the cost of control and flexibility.
+        p Emerging digital health products need to demonstrate compliance and security credibility from day one and need a fast and simple way to start without taking on the burden of compliance.
       .columns.small-12.medium-4
-        p Apps and services need to scale and grow, with more orchestration and management needs.
-        p You gain more control & scalability, and take on more responsbility for compliance.
+        p As your apps and services scale so does your need for orchestration and control. You now have the resources to take on more of the compliance responsibility yourself.
       .columns.small-12.medium-4
-        p Complete control and visibility into your compliance state. 
-        p You gain control, but are responsible for maintaining compliance.
+        p You have building your compliant apps and infrastructure covered, but continuously maintaining and monitoring compliance of your complex environment may be beyond you.
 
   .row.collapse.align-center.small-up-1.medium-large-up-2.large-up-3.row--card-grid
     .column.relative.has-blob
