--- a/source/assets/scss/settings.scss
+++ b/source/assets/scss/settings.scss
@@ -519,8 +519,8 @@ $button-transition: background-color 0.25s ease-out, color 0.25s ease-out;
 // 12. Button Group
 // ----------------
 
-$buttongroup-margin: 1rem;
-$buttongroup-spacing: 1rem;
+$buttongroup-margin: 0;
+$buttongroup-spacing: 2rem;
 $buttongroup-child-selector: '.button';
 $buttongroup-expand-max: 6;
 $buttongroup-radius-on-each: true;
