changed button-cluster to zf button-group

--- a/source/_products/_features.html.slim
+++ b/source/_products/_features.html.slim
@@ -29,7 +29,7 @@ section#tech-features.section-article.container-gray-11.container-image--fixed(d
           h1.headline-2.text-center Datica Platform Features
           p.text-center Features that not only show you how to be compliant, but actually <em>make you</em> compliant against the healthcare's most stringent security requirements.
 
-          .menu.button-cluster.align-center
+          .menu.button-group.align-center
             = partial "partials/snippets/button", :locals => { :label => "See our Roadmap", :title => "View Platform pricing", :url => "roadmap", :button_classes => "button hollow", :item_id => "cta_top_pricing", :icon => "icon-map" }
             = partial "partials/snippets/button", :locals => { :label => "Explore Compliance", :title => "Explore Compliance", :url => "/compliance", :button_classes => "button button--light", :icon => "icon-shield-solid-small", :item_id => "top-tech" }
 
