--- a/source/compliance/misc.html.slim
+++ b/source/compliance/misc.html.slim
@@ -90,7 +90,7 @@ section#compliance-video.section-article.bg-gray-11
       = inline_svg_art("source/assets/img/art/k8-continuous-compliance.svg", class: "svg-color--white")
       h3.headline-4 Datica solves your problem
       p Datica’s array of products and services allow development flexibility while providing prescriptive compliance and security built in. With Datica, any technology team can manage compliance on the cloud, giving organizations the assurances they need to adopt the benefits of the cloud.
-  / .menu.button-cluster.align-center
+  / .menu.button-group.align-center
 
 section#compliance-shared-responsibility.section-article.container-gray-2
   .row.group.align-center
