--- a/source/contentful_templates/customer.html.erb
+++ b/source/contentful_templates/customer.html.erb
@@ -153,7 +153,7 @@ end
 
     <div class="row align-center" id="pageNav">
         <div class="columns small-12">
-            <div class="menu button-cluster align-center">
+            <div class="menu button-group align-center">
                 <% filtered_customers = data.site.customers.select{ |id, customer| (customer.has_key?("case_study") || customer.has_key?("customer_spotlight")) } %>
                 <% previous_item = get_previous_item(filtered_customers, p, "company_name") %>
                 <%= partial "partials/snippets/button", :locals => { :label => "Customer Success", :title => "Datica Customer Proof - See All", :url => "/compliant-kubernetes-service/", :button_classes => "medium-order-2 button hollow hollow-invisible", :icon => "icon-chevron-up", :icon_align => "right", :icon_color => "blue", :rel => "prev" } %>
