Tweaks per convo with MT, type updates

--- a/source/academy/index.html.erb
+++ b/source/academy/index.html.erb
@@ -1,5 +1,5 @@
 ---
-title: "Learn about HIPAA, HITRUST, HL7, FHIR, and more at the Datica Academy"
+title: "Your place to learn the intricacies of interoperability, compliance, and cloud technologies."
 summary: "The industry's leading resource for understanding complex healthcare topics"
 author: "Datica, Inc."
 tags: "training, education, HIPAA, HL7, FHIR, interoperability, EHR, integration, resource"
