--- a/source/contentful_templates/academy.html.erb
+++ b/source/contentful_templates/academy.html.erb
@@ -1,6 +1,6 @@
 ---
 header: "Datica HIPAA Academy"
-subheader: "How does healthcare innovate? Datica explores this topic in a new series of interviews with several of the industry's top thinkers and doers. Follow along with us as we uncover insights to catalyzing change in healthcare."
+subheader: "Your place to learn the intricacies of interoperability, compliance, and cloud technologies."
 ogType: article
 layout: "basic"
 sharer: true
