--- a/source/compliance/index.html.slim
+++ b/source/compliance/index.html.slim
@@ -14,8 +14,8 @@ priority: "0.9"
 ---
 ruby:
   current_page.data.asset_preload = '<link href="' + bg_product_dark + '" rel="preload" as="image" />'
-  # current_page.data.share_image = image_share_platform
-  featured_img = "https://images.ctfassets.net/189dvqdsjh46/40nTU46iGkIsck8qEa0qcm/f7a9bab25f465f62ad6043a53744aaef/group_working_on_computer_-_istockphoto-835579140-edit_2__pale_right.jpg"
+  current_page.data.share_image = "https://images.ctfassets.net/189dvqdsjh46/2aPhdyH76MiQwqQq4KiGMg/186518b5a3896994d54ae3cef4fbac8d/cta-compliance-share.jpg"
+  featured_img = "https://images.ctfassets.net/189dvqdsjh46/40nTU46iGkIsck8qEa0qcm/4822d250b4eb05924aa530dbd1ccf73f/working_together__looking_at_screen.jpg"
   current_page.data.share_image = featured_img
 
 /= partial "partials/snippets/platform-icons"
