--- a/source/integration/index.html.slim
+++ b/source/integration/index.html.slim
@@ -14,7 +14,7 @@ priority: "0.9"
 ---
 ruby:
   current_page.data.asset_preload = '<link href="' + bg_product_dark + '" rel="preload" as="image" />'
-  # current_page.data.share_image = image_share_platform
+  current_page.data.share_image = "https://images.ctfassets.net/189dvqdsjh46/Qh24iUaLW6Saoe4QKAAu6/3c1d9922a320aa39808f5b55e1a2583f/cta-integrations-share.jpg"
   featured_img = "https://images.ctfassets.net/189dvqdsjh46/62MYHqth60wmUosWQQ0es8/0715bdb8ca051eb4e3e69085fc78c443/Computer_programmers_working_together.jpg"
   current_page.data.share_image = featured_img
 / = partial "partials/snippets/platform-icons"
