--- a/source/compliance/index.html.slim
+++ b/source/compliance/index.html.slim
@@ -67,7 +67,7 @@ section#compliance-products.section-article.bg-gray-3.container-image-fill.lozad
     .columns.small-12.medium-10.large-8.group
       h2.headline-2 Compliance Solutions
       p.lead Compliance on the cloud isn’t a one-size-fits-all kind of challenge. Maybe you don’t have the expertise, time, and resources to build your own compliant infrastructure and want a solution that picks up where your cloud provider leaves off.  Or, maybe you do and just need help with compliance monitoring and reporting for your complex environments.
-      p.lead Wherever you are on the <a class="link-light-underline" href="/academy/steps-to-climbing-maturity-model/" title="Steps to Climbing the Maturity Model | Datica Academy">compliance maturity scale</a>, we can help.
+      p.lead Wherever you are on the compliance maturity scale, we can help.
   #product-lens.show-for-medium
     .row.align-justify.text-center
       .columns.small-12.medium-4 
