--- a/source/partials/content/_recent-items.slim
+++ b/source/partials/content/_recent-items.slim
@@ -7,7 +7,7 @@ ruby:
   sorted_webinars = data.site.webinars.to_a.sort_by{ |id, webinars| webinars['event_date'] }.reverse!
 .group.text-center.full-width
   h3.headline-3 <strong>Recently</strong> at Datica
-.row.full-width.align-center.small-up-1.medium-up-2.large-up-3.xlarge-up-4
+.row.full-width.align-center.align-middle.small-up-1.medium-up-2.large-up-3.xlarge-up-4
   - sorted_guides.take(1).each do | id, guide_entry |
     .column.hide-for-large-only
       = partial "partials/cards/card-report", :locals => { :post => guide_entry, :style => "dark", :size => "small" }
