working customers page via CF collection entry

--- a/source/assets/scss/modules/containers.scss
+++ b/source/assets/scss/modules/containers.scss
@@ -506,3 +506,10 @@
         margin-right: 0;
     }
 }
+
+// for content collections
+.collection .row:nth-child(odd) {
+    @include breakpoint (medium) {
+        flex-direction: row-reverse;
+    }
+}
