--- a/source/customers/index.html.slim
+++ b/source/customers/index.html.slim
@@ -17,142 +17,70 @@ ruby:
   current_page.data.share_image = "https://images.ctfassets.net/189dvqdsjh46/2aPhdyH76MiQwqQq4KiGMg/186518b5a3896994d54ae3cef4fbac8d/cta-compliance-share.jpg"
   featured_img = "https://images.ctfassets.net/189dvqdsjh46/40nTU46iGkIsck8qEa0qcm/4822d250b4eb05924aa530dbd1ccf73f/working_together__looking_at_screen.jpg"
 
-/= partial "partials/snippets/platform-icons"
-section.hide-for-large
-  .row.collapse
-    .columns.small-12
-      img.lozad.blur-in src="#{featured_img}?fit=thumb&w=800&h=400?q=10" data-src="#{featured_img}?fit=thumb&w=800&h=600&q=30" data-srcset="#{featured_img}?fit=thumb&w=800&h=600&q=50 800w, #{featured_img}?fit=thumb&w=1600&h=600 1200w" alt="Tech workers working on an audit"
-      .bg-white.pad--lg
-        h1.headline-1 Can your business pass a HITRUST audit?
-        h2.headline-3.text-bold.group With CCMS, the answer is yes.
-        p.lead <strong>Get back to solving problems for healthcare.</strong> Let Datica take on the burden of compliance. We're the experts at understanding the exact policies and procedures required to turn HIPAA-eligible services on the public cloud into architectures that can pass a HITRUST CSF assessment. That expertise is passed on to you through our products and rock-solid BAA.
-        = partial "partials/snippets/button", :locals => { :label => "Get started", :url => "/cloud-compliance-management-system#cta", :button_classes => "button nomargin", :item_id => "cta_top-products", :icon => "icon-chevron-right", :icon_align => "right" }
-section#top.show-for-large.section-article.pad-no-bottom.bg-gray-3.container-image--center.lozad data-background-image="#{featured_img}?fit=thumb&w=1800&h=900&q=65"
-  .row.align-right.align-middle
-    .columns.small-12.medium-6
-      h1.headline-1.text-bold.text-shadow.group--2x Can your business pass a HITRUST audit?
-      .bg-white.pad--lg.drop.pull-down
-        h2.headline-3.text-bold With CCMS, the answer is yes.
-        p.lead <strong>Get back to solving problems for healthcare.</strong> Let Datica take on the burden of compliance. We're the experts at understanding the exact policies and procedures required to turn HIPAA-eligible services on the public cloud into architectures that can pass a HITRUST CSF assessment. That expertise is passed on to you through our products and rock-solid BAA.
-        = partial "partials/snippets/button", :locals => { :label => "Get started", :url => "/cloud-compliance-management-system#cta", :button_classes => "button nomargin success", :item_id => "cta_top-products", :icon => "icon-chevron-right", :icon_align => "right" }
-
-.strip-bright
-scss:
-  .border-dash-line {
-    margin: 1.3rem 0;
-    height: 2px;
-    position: relative;
-    background: repeating-linear-gradient(to right,white 0,white 8px,transparent 8px,transparent 15px);
-    &::before, &::after { // svg data-URI of chevron shape
-      content: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='18' viewBox='0 2 16 14'%3E%3Cpolygon fill='%23fff' points='5.665 1 4 2.645 9.408 8 4 13.355 5.665 15 12.75 8'/%3E%3C/svg%3E");
-      display: inline-block;
-      width: 16px;
-      height: 16px;
-      margin: -7px;
-      transform-origin: 48%;
-      position: absolute;
-    }
-    &::before {
-      transform: rotate(180deg);
-      left: -5px;
-    }
-    &::after {
-      right: -5px;
-    }
-  }
-
-section#compliance-products.section-article.bg-gray-3.container-image-fill.lozad data-background-image="https://images.ctfassets.net/189dvqdsjh46/6OKt8JnNqo86wQIgOqiGcs/232794aa517af9870472dd34726ef595/hex-pattern-dark-bg.svg"
-  .row
-    .columns.small-12.medium-10.large-8.group
-      h2.headline-2 Compliance Solutions
-      p.lead Compliance on the cloud isn’t a one-size-fits-all kind of challenge. Maybe you don’t have the expertise, time, and resources to build your own compliant infrastructure and want a solution that picks up where your cloud provider leaves off.  Or, maybe you do and just need help with compliance monitoring and reporting for your complex environments.
-      p.lead Wherever you are on the road to healthcare compliance, we can help.
-  #product-lens.show-for-medium
-    .row.align-justify.text-center
-      .columns.small-12.medium-4 
-        h3.headline-3.text-italic.text-serif.nomargin Simplicity & speed
-      .columns.small-12.medium-4 
-        h3.headline-3.text-italic.text-serif.nomargin Developer Control
-    .row
-      .column
-        .border-dash-line
-    .row.align-justify.text-small
-      .columns.small-12.medium-4
-        p Emerging digital health products need to demonstrate compliance and security credibility from day one and need a fast and simple way to start without taking on the burden of compliance.
-      .columns.small-12.medium-4
-        p As your apps and services scale so does your need for orchestration and control. You now have the resources to take on more of the compliance responsibility yourself.
-      .columns.small-12.medium-4
-        p You have building your compliant apps and infrastructure covered, but continuously maintaining and monitoring compliance of your complex environment may be beyond you.
-
-  .row.collapse.align-center.small-up-1.medium-large-up-2.large-up-3.row--card-grid
-    .column.relative.has-blob
-      .card.container-color--trans.relative.z-5
-        .card-section
-          = inline_svg("cpaas-logo-w", class: "icon-size--xlarge")
-          .subhead--spaced CPaaS
-          h3.headline-4 Compliant Platform <br />as a Service
-          p.strip.strip-small.strip-cpaas
-          p.lead Build and deploy a digital health application on a compliant hosted platform
-          / p Datica Compliant Platform as a Service gives startups pre-packaged compliance and security. CPaaS makes hosting your compliant healthcare applications as simple as git push.
-        .card-divider.card-divider--flush
-          = partial "partials/snippets/button", :locals => { :label => "Learn more about CPaaS", :url => "/compliant-platform-as-a-service/", :button_classes => "button button--light button-inline", :item_id => "product-group-cpaas", :icon => "icon-angle-right", :icon_align => "right" }
-      .blob-color.blob-cpaas.z-auto data-glow="false"
-    .column.relative.has-blob
-      .card.container-color--trans.relative.z-5
-        .card-section
-          = inline_svg("cks-logo-w", class: "icon-size--xlarge")
-          .subhead--spaced CKS
-          h3.headline-4 Compliant Kubernetes Service
-          p.strip.strip-small.strip-cks
-          p.lead Get enterprise scalability for your complex digital health application on a compliant Kubernetes cluster
-          / p Datica Compliant Kubernetes Service gives you the orchestration and scalable power of Kubernetes with compliance built in.
-        .card-divider.card-divider--flush
-          = partial "partials/snippets/button", :locals => { :label => "Learn more about CKS", :url => "/compliant-kubernetes-service/", :button_classes => "button button--light button-inline", :item_id => "product-group-cks", :icon => "icon-angle-right", :icon_align => "right" }
-      .blob-color.blob-cks.z-auto data-glow="false"
-    .column.relative.has-blob
-      .card.container-color--trans.relative.z-5
-        .card-section
-          = inline_svg("ccms-logo-w", class: "icon-size--xlarge")
-          .subhead--spaced CCMS
-          h3.headline-4 Cloud Compliance Management System 
-          p.strip.strip-small.strip-ccms
-          p.lead Know the precise compliance state of your cloud environments
-          / p Datica Cloud Compliance Management System is the first-ever tool to guarantee compliance assurance of managed cloud-native services. Our dashboard and reports enable you to continuously monitor compliance, react quickly to risks and incidents, and attest to compliance for audits.
-        .card-divider.card-divider--flush
-          = partial "partials/snippets/button", :locals => { :label => "Learn more about CCMS", :url => "/cloud-compliance-management-system/", :button_classes => "button button--light button-inline", :item_id => "product-group-ccms", :icon => "icon-angle-right", :icon_align => "right" }
-      .blob-color.blob-ccms.z-auto data-glow="false"
-
-
-section.section-article.pad-no-bottom.bg-gray-12
-  .row.align-center.align-middle.group--2x
-    .columns.small-12.large-8.text-center
-      h2.headline-4.group Datica helps you comply with multiple compliance frameworks.
-      .row.medium-up-5.align-middle.align-center
-        - data.views.home.badges.each do |logo|
-          - logo.logoSize == "xlarge" ? logopad = "pad--sm" : nil
-          .column
-            img alt="#{logo["name"]}" class="lozad" data-src="#{logo["fileUrl"]}" /
-  .row.align-center.align-middle.group style="overflow: hidden;"
-    .columns.small-12.large-8.text-center
-      h2.headline-4 Datica Global Compliance Posture
-      p.lead.text-center Datica's stringent compliance posture makes us compliant with many global standards.
-      = partial "partials/snippets/button", :locals => { :label => "Explore global compliance", :url => "/compliance/global/", :button_classes => "button hollow group", :item_id => "compliance-global", :icon => "icon-angle-right", :icon_align => "right" }
-      / a href="/compliance/global/" title="Global Compliance Table"
-        - preview = "https://images.ctfassets.net/189dvqdsjh46/4KtjQwGLOo6UGoAY82qe6k/dd058456a0fef3d725cd5fc8a1713840/global_compliance_stance_table.png"
-        img.lozad.drop.blur-in alt="Global Compliance Table" src="#{preview}?w=1200&fm=jpg&q=5" data-src="#{preview}?w=1200&fm=png&fl=png8"
-
-section#resources.section-article.collection.bg-gray-11
-  - related_entries = data.site.collections.to_a.select { |id, entry | (id == "2xAKQVZSKIsygICqimW0qA") }
+section#resources.section-article.bg-gray-11
+  - related_entries = data.site.collections.to_a.select { |id, entry | (id == "5Lty4ePvawI0SKMa8S4aIc") }
   - related_entries.each do | id, collection |
     .row.align-center
-      .columns.small-12.text-center
-        h2.headline-3 = collection.subhead
+      .columns.small-12.medium-10.large-7.text-center
+        h1.headline-4.spaced-out = collection.title
+        h2.headline-2 = collection.subhead
         - if collection.has_key?("desc")
           p.lead.line-length.margin-auto = collection.desc
-    = partial "/partials/content/collection-list", :locals => { :collection => collection }
+    / This partial iterates through a CF collection datatype (itself just a basic entry type, that references others). 
+    - collection["related_entries"].each_with_index do | entry, index |
+      - type = entry._meta.content_type_id
+      - folder = case type
+      - when "caseStudy" then "customer"
+      - else type
+      - url = "/#{folder}/#{entry.customer.slug}/"
+      - title = entry.case_study_title
+      - company = entry.customer.company_name
+
+      - if index == 3
+        section.section-article.container-gray-11
+          .row.align-center
+            .columns.small-12.large-11.text-center
+              h3.headline-3 <strong>World-class companies</strong> trust Datica
+              .logo-cloud
+                - data.views.home.customers.each do |logo| # trying this as data-interchange for perf
+                  img alt="#{logo["name"]}" class=("lozad logo-cloud--item logo-size--#{logo['logoSize']}") data-src="/public/img/customer-logos/sm/#{logo['file']}.png" /
+
+      .row.align-center.align-middle.section-article--med
+        .columns.small-12.medium-6.large-6.xlarge-5
+          p
+            a href=url
+              img.logo-size--medium alt=("#{company} Logo") src="/public/img/customer-logos/#{entry.customer.slug}-logo.png" /
+          - if entry.has_key?("value_prop")
+            h3.headline-4 = entry["value_prop"]
+          - if entry.has_key?("customer_quote")
+            blockquote.quote--serif
+              = entry["customer_quote"]["quote_body"]
+          - if entry["customer"].has_key?("profile_pic")
+            = partial("partials/snippets/person", :locals => { :p => data.site.customers[entry.customer.id] })
+          / h5.subhead--spaced = type.capitalize
+          / p = (entry["customer"].has_key?("customer_story_short") ? entry.customer.customer_story_short : nil)
+        .columns.small-12.medium-6.large-6.xlarge-7
+          - if entry.has_key?("media_object")
+            .group
+              = entry["media_object"]
+          h3.headline-4
+            a href=url title=entry.title
+              = entry.title
+          = partial "partials/snippets/button", :locals => { :label => "Read the #{company} Case Study", :url => url, :icon_align => "left", :button_classes => "button secondary button--hover-compliance no-nudge", :icon => "icon-files", :item_id => "casestudy_#{entry.slug}", :data_track_group => "" }
+
+section#products.section-article.bg-gray-3.container-image-fill.lozad data-background-image=bg_product_dark
+  .row.align-center
+    .columns.small-12.medium-12.large-8.text-center
+      h2.headline-1.text-bold What's your biggest challenge?
+  .row.align-center
+    .columns.small-12.large-8.text-center
+      p.lead <strong>You have complex problems.</strong> Datica has a family of powerful solutions. Powerful when used on their own but meant to work together, our products and solutions address your most pressing challenges.
+  .button-group.menu.align-center.group
+    = partial "partials/snippets/button", :locals => { :label => "I need to pass a HITRUST audit", :url => "/compliance/", :icon_align => "left", :button_classes => "button button--light button--hover-compliance no-nudge", :icon => "icon-chevron-left", :item_id => "product", :data_track_group => "cat_integration" }
+    = partial "partials/snippets/button", :locals => { :label => "I need to integrate with an EHR", :url => "/integration/", :button_classes => "button button--light button--hover-integration no-nudge", :icon => "icon-chevron-right", :icon_align => "right", :item_id => "product", :data_track_group => "cat_compliance" }
 
 .strip.strip-ccms
-aside#ctaBottom.bg-gray-3.section-article.container-image--center.lozad data-background-image=bg_product_dark
+/ aside#ctaBottom.bg-gray-3.section-article.container-image--center.lozad data-background-image=bg_product_dark
   .relative.has-blob
     .relative.z-5
       .row.align-center.group--sm
