cleaned up button transition css; tweaks to event template and partials.

--- a/source/assets/scss/mixins/functions.scss
+++ b/source/assets/scss/mixins/functions.scss
@@ -185,14 +185,14 @@ $underline: false !default;
                 flex: $set;
 }
 @mixin fx-hover-nudge {
-    transition: transform $timing-default * 0.8 ease, color $timing-default * 0.8 linear, background-color $timing-default * 0.8 linear;
+    transition: $button-transition;
     &:focus,
     &:hover {
         transform: translate3d(3px, 0, 0);
     }
 }
 @mixin fx-hover-nudge-left {
-    transition: transform $timing-default * 0.8 ease, color $timing-default * 0.8 linear, background-color $timing-default * 0.8 linear;
+    transition: $button-transition;
     &:focus,
     &:hover {
         transform: translate3d(-3px, 0, 0);
